реализованы страницы входа и сброса пароля. добавлена рабочая вкладка настроек со сменой языка, темы программы и выхода из аккаунта

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -3,5 +3,32 @@
     "appName": "TaskFlow",    
     "helloMessage": "Hello, {name}",
     "enter_correct_email": "Please, enter the correcr email",
-    "email": "Email"
+    "email": "Email",
+    "field_must_be_filled": "Field must be filled",
+    "username":"Username",
+    "password": "Password",
+    "password_requirements": "The password must contain lowercase and uppercase, numbers, special characters and be longer than 8 characters",
+    "sign_up": "Sign up",
+    "sign_in": "Sign in",
+    "registration_failed": "Registration failed",
+    "email_already_in_use": "Email already in use",
+    "invalid_email": "Invalid email",
+    "weak_password": "Weak password",
+    "forget_password": "Forget password?",
+    "login_failed": "Login failed",
+    "password_reset_email_sent": "Password reset email sent",
+    "error_of_sending_the_email": "The error of sending the email",
+    "reset_password": "Reset password",
+    "account_not_found": "The specified account was not found",
+    "not_found_title": "Oops! The task ran away!",
+    "not_found_subtitle": "Looks like you ended up where no tasks exist.\nMaybe it's already done? 😉",
+    "back_button": "Back",
+    "search": "Search",
+    "settings": "Settings",
+    "design_theme": "Design theme",
+    "system": "System",
+    "light": "Light",
+    "dark": "Dark",
+    "language": "Language",
+    "sign_out": "Sign out"
 }
