сделаны карточки для главной страницы, фильтрация, сортировка и поиск

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -58,5 +58,32 @@
     "error": "Error",
     "unsaved_data": "You have unsaved data",
     "want_to_save": "Do you want to save them?",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "reminder15m": "In 15 minutes",
+    "reminder30m": "In 30 minutes",
+    "reminder1h": "In 1 hour",
+    "reminder6h": "In 6 hours",
+    "reminder12h": "In 12 hours",
+    "reminder1d": "In 1 day",
+    "reminder3d": "In 3 days",
+    "reminder1w": "In 1 week",
+    "reminder1mo": "In 1 month",
+    "time_of_reminder": "Time of reminder",
+    "select": "Select",
+    "change": "Change",
+    "select_time": "Select time",
+    "completed": "Completed",
+    "overdue": "Overdue by",
+    "days": "days",
+    "hours": "hr",
+    "minutes": "min",
+    "complete": "Complete",
+    "repeat": "Repeat",
+    "delete_confirmation": "Delete task?",
+    "delete": "Delete",
+    "confirm_delete_task": "Are you sure you want to delete \"{taskName}\"?",
+    "task_deleted": "Task deleted successfully",
+    "task_completed": "Task completed successfully",
+    "task_repeated": "Task repeated successfully",
+    "you_have": "You have"
 }
