--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -58,5 +58,32 @@
     "error": "Ошибка",
     "unsaved_data": "У вас есть несохраненные данные",
     "want_to_save": "Хотите сохранить их?",
-    "cancel": "Отмена"
+    "cancel": "Отмена",
+    "reminder15m": "За 15 минут",
+    "reminder30m": "За 30 минут",
+    "reminder1h": "За 1 час",
+    "reminder6h": "За 6 часов",
+    "reminder12h": "За 12 часов",
+    "reminder1d": "За 1 день",
+    "reminder3d": "За 3 дня",
+    "reminder1w": "За 1 неделю",
+    "reminder1mo": "За 1 месяц",
+    "time_of_reminder": "Время напоминаний",
+    "select": "Выбрать",
+    "change": "Изменить",
+    "select_time": "Выберите время",
+    "completed": "Выполнено",
+    "overdue": "Просрочено на",
+    "days": "дн.",
+    "hours": "ч.",
+    "minutes": "мин.",
+    "complete": "Завершить",
+    "repeat": "Повторить",
+    "delete_confirmation": "Удалить задачу?",
+    "delete": "Удалить",
+    "confirm_delete_task": "Вы уверены, что хотите удалить \"{taskName}\"?",
+    "task_deleted": "Задача успешно удалена",
+    "task_completed": "Задача успешно выполнена",
+    "task_repeated": "Задача успешно возобновлена",
+    "you_have": "Осталось"
 }
