--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -85,5 +85,6 @@
     "task_deleted": "Задача успешно удалена",
     "task_completed": "Задача успешно выполнена",
     "task_repeated": "Задача успешно возобновлена",
-    "you_have": "Осталось"
+    "you_have": "Осталось",
+    "no_tasks_found": "Задачи не были найдены"
 }
