--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -86,5 +86,9 @@
     "task_completed": "Задача успешно выполнена",
     "task_repeated": "Задача успешно возобновлена",
     "you_have": "Осталось",
-    "no_tasks_found": "Задачи не были найдены"
+    "no_tasks_found": "Задачи не были найдены",
+    "notification_permission_title": "Разрешение на уведомления",
+    "notification_permission_content": "Для полноценной работы приложения и напоминаний требуется доступ к уведомлениям. Пожалуйста, разрешите уведомления в настройках приложения.",
+    "notification_permission_open_settings": "Открыть настройки",
+    "notification_permission_later": "Позже"
 }
